--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="css/main.css"></link>
 		<link rel="stylesheet" href="css/comprar.css"></link>
+		<link rel="stylesheet" href="css/pedidos.css"></link>
 	</head>
 	<body>
 		<header>
@@ -17,7 +18,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarText">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="#/comprar">Comprar</a>
 						</li>
 						<li class="nav-item">
@@ -49,6 +50,8 @@
 		<script src="js/services/PetsByStatus.js"></script>
 		<script src="js/services/MakeOrder.js"></script>
 		<script src="js/services/SavePet.js"></script>
+		<script src="js/services/OrderByID.js"></script>
+		<script src="js/services/PetByID.js"></script>
 
 		<script src="js/controllers/ComprarCtrl.js"></script>
 		<script src="js/controllers/PedidosCtrl.js"></script>
