--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/main.css"></link>
 		<link rel="stylesheet" href="css/comprar.css"></link>
 		<link rel="stylesheet" href="css/pedidos.css"></link>
+		<link rel="stylesheet" href="css/login.css"></link>
 	</head>
 	<body>
 		<header>
@@ -55,5 +56,6 @@
 
 		<script src="js/controllers/ComprarCtrl.js"></script>
 		<script src="js/controllers/PedidosCtrl.js"></script>
+		<script src="js/controllers/LoginCtrl.js"></script>
 	</body>
 </html>
