--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					</ul>
 					<span class="navbar-text">
 						<span ng-hide="$storage.userLogged != null"><a class="text-info" role="button" href="#/cadastro">Cadastro</a> <span aria-hidden="true">|</span><span class="sr-only">ou</span> <a class="text-info" role="button" href="#/login">Login</a></span>
-						<span ng-hide="$storage.userLogged == null">Olá, {{$storage.userLogged.firstName}} {{$storage.userLogged.lastName}}. <a class="text-info" role="button" aria-label="Clique aqui para sair" href="" ng-click="deslogar()">Sair</a></span>
+						<span ng-hide="$storage.userLogged == null">Olá, {{$storage.userLogged.firstName}} {{$storage.userLogged.lastName}}. <span aria-hidden="true">| </span><a class="text-info" role="button" aria-label="Clique aqui para sair" href="" ng-click="deslogar()">Sair</a></span>
 					</span>
 				</div>
 			</nav>
@@ -56,10 +56,12 @@
 		<script src="js/services/OrderByID.js"></script>
 		<script src="js/services/PetByID.js"></script>
 		<script src="js/services/UserByUsername.js"></script>
+		<script src="js/services/CadastroService.js"></script>
 
 		<script src="js/controllers/IndexCtrl.js"></script>
 		<script src="js/controllers/ComprarCtrl.js"></script>
 		<script src="js/controllers/PedidosCtrl.js"></script>
 		<script src="js/controllers/LoginCtrl.js"></script>
+		<script src="js/controllers/CadastroCtrl.js"></script>
 	</body>
 </html>
