Desing melhorado e correções

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#/comprar">Comprar</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item" ng-hide="$storage.userLogged == null">
 							<a class="nav-link" href="#/pedidos">Pedidos</a>
 						</li>
 					</ul>
