--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				<div class="collapse navbar-collapse" id="navbarText">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="#/comprar">Comprar</a>
+							<a class="nav-link" href="#/comprar" ng-class="{'active' : $storage.viewAtual === 'comprar' || $storage.viewAtual == null}">Comprar<span class="sr-only" ng-hide="$storage.viewAtual !== 'comprar' && $storage.viewAtual != null"> (atual)</span></a>
 						</li>
 						<li class="nav-item" ng-hide="$storage.userLogged == null">
-							<a class="nav-link" href="#/pedidos">Pedidos</a>
+							<a class="nav-link" href="#/pedidos" ng-class="{'active' : $storage.viewAtual === 'pedidos'}">Pedidos<span class="sr-only" ng-hide="$storage.viewAtual !== 'pedidos'"> (atual)</span></a>
 						</li>
 					</ul>
 					<span class="navbar-text">
