--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 		<script src="js/services/PetByID.js"></script>
 		<script src="js/services/UserByUsername.js"></script>
 		<script src="js/services/CadastroService.js"></script>
+		<script src="js/services/MakeOrderFirebase.js"></script>
+		<script src="js/services/CancelOrderFirebase.js"></script>
+		<script src="js/services/GetUserPedidos.js"></script>
 
 		<script src="js/controllers/IndexCtrl.js"></script>
 		<script src="js/controllers/ComprarCtrl.js"></script>
